--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,2 +1,32 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+:root {
+    /* fonts */
+    --font-sans: 'Inter', sans-serif;
+  
+    /* colors */
+    --color-primary: oklch(65.62% 0.23 16.99);
+    --color-primary-content: oklch(100% 0 0);
+    --color-secondary: oklch(30.99% 0.0206 269.45);
+    --color-secondary-content: oklch(100% 0 0);
+    
+    --color-base-100: oklch(98% 0.02 240);  
+    --color-base-200: oklch(95% 0.03 240);
+    --color-base-300: oklch(92% 0.04 240);
+    --color-base-content: oklch(20% 0.05 240);    
+  
+    --color-accent: oklch(65% 0.25 160);
+    --color-accent-content: oklch(98% 0.01 160);
+    --color-neutral: oklch(50% 0.05 240);
+    --color-neutral-content: oklch(98% 0.01 240);
+    --color-info: oklch(70% 0.2 220);
+    --color-info-content: oklch(98% 0.01 220);
+    --color-success: oklch(65% 0.25 140);
+    --color-success-content: oklch(98% 0.01 140);
+    --color-warning: oklch(80% 0.25 80);
+    --color-warning-content: oklch(20% 0.05 80);
+    --color-error: oklch(65% 0.3 30);
+    --color-error-content: oklch(98% 0.01 30); 
+  }
+  
