--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -12,9 +12,9 @@
   --font-sans: 'Inter', sans-serif;
 
   /* Main colors */
-    --color-primary: oklch(65.62% 0.23 16.99);
+    --color-primary: oklch(65.62% 0.23 16.99) !important;
     --color-primary-content: oklch(100% 0 0);
-    --color-secondary: oklch(22.23% 0.006 271.14);
+    --color-secondary: oklch(30.99% 0.0206 269.45);
     --color-secondary-content: oklch(100% 0 0);
 
     /* Background colors */
